Changed method toList (Doesn't work with Java 11)